--- a/Application/client/package.json
+++ b/Application/client/package.json
@@ -8,11 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
     "framer-motion": "^5.6.0",
+    "mysql": "^2.18.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
-    "react-search-autocomplete": "^5.4.4",
     "spotify-web-api-node": "^5.0.2",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.3"
