--- a/Application/client/package.json
+++ b/Application/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
     "framer-motion": "^5.6.0",
+    "memfs": "^4.9.2",
     "mysql": "^2.18.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
