--- a/Application/server/package.json
+++ b/Application/server/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "lyrics-finder": "^21.7.0",
-    "spotify-web-api-node": "^5.0.2"
+    "spotify-web-api-node": "^5.0.2",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
